<resources>
    <string name="app_name">NeighbourlyUI</string>
    <string name="save">Save</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="change_neighborhood">Change Neighborhood</string>
    <string name="bellandur">Bellandur</string>
    <string name="munnekollal">Munnekollal</string>
    <string name="add_neighborhood">Add neighborhood</string>
    <string name="remove">Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer">Answer</string>
</resources>