<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/changeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_neighborhood"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/bellandur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bellandur"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintTop_toBottomOf="@id/changeText"
            app:layout_constraintStart_toStartOf="@id/changeText"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/Munnekollal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/munnekollal"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintTop_toBottomOf="@id/bellandur"
            app:layout_constraintStart_toStartOf="@id/changeText"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/addText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_neighborhood"
            app:drawableLeftCompat="@drawable/ic_baseline_add_24"
            app:layout_constraintTop_toBottomOf="@id/Munnekollal"
            app:layout_constraintStart_toStartOf="@id/changeText"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/removeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            app:drawableRightCompat="@drawable/ic_remove"
            app:layout_constraintTop_toTopOf="@id/bellandur"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>