<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    app:cardCornerRadius="30dp"
    android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/userImage"
            app:layout_constraintStart_toEndOf="@id/userImage"
            android:layout_marginStart="10dp"
            tools:text="User name"/>

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_location"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/userImage"
            app:layout_constraintStart_toEndOf="@id/userImage"/>

        <TextView
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/locationIcon"
            app:layout_constraintTop_toTopOf="@id/locationIcon"
            app:layout_constraintStart_toEndOf="@id/locationIcon"
            tools:text="User's location"/>

        <TextView
            android:id="@+id/userQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userLocation"
            app:layout_constraintStart_toStartOf="@id/locationIcon"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/purple_700"
            tools:text="What are some of the top places to visit in India during a visit? PS I have visited places like Pune, Mumbai and Chennai"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userQuestion">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/commenterImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_profile"/>

            <TextView
                android:id="@+id/commenterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/commenterImage"
                app:layout_constraintStart_toEndOf="@id/commenterImage"
                app:layout_constraintBottom_toBottomOf="@id/commenterImage"
                android:layout_marginStart="10dp"
                tools:text="User name"/>

            <TextView
            android:id="@+id/commenterReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/commenterImage"
            app:layout_constraintStart_toStartOf="@id/commenterName"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/purple_700"
            tools:text="At Apollo pharmacy, you can get hot and cold gel bag. You can put the bag in boiling water to heat and then use it for your pains"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/numberOfAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5 Answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAnswer"
            android:layout_marginTop="30dp"
            android:textColor="@color/purple_500"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberOfAnswers"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/save"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:layout_marginEnd="20dp"
                android:textColor="#3D5AFE"
                app:drawableLeftCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/like"
                android:textColor="#3D5AFE"
                app:drawableStartCompat="@drawable/ic_like" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:drawablePadding="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/comment"
                android:textColor="@android:color/holo_orange_dark"
                app:drawableStartCompat="@drawable/ic_comment" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>